<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.activities.CoinDetailActivity">


    <ImageView
        android:id="@+id/ivDetailLogoCoin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:contentDescription="@null"
        android:src="@android:drawable/sym_def_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:text="@string/slash"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/tvToSymbol"
        app:layout_constraintStart_toEndOf="@+id/tvFromSymbol"
        app:layout_constraintTop_toBottomOf="@id/ivDetailLogoCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        tools:text="USD" />

    <TextView
        android:id="@+id/tvDetailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_price_template"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvPriceNow"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash" />

    <TextView
        android:id="@+id/tvPriceNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvDetailPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash"
        tools:text="7352.5" />

    <TextView
        android:id="@+id/tvDetailMinPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/min_price_template"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvMinPrice"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailPrice" />

    <TextView
        android:id="@+id/tvMinPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvDetailMinPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceNow"
        tools:text="7110.0" />

    <TextView
        android:id="@+id/tvDetailMaxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/max_price_template"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvMaxPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailMinPrice" />

    <TextView
        android:id="@+id/tvMaxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvDetailMaxPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvMinPrice"
        tools:text="7820.1" />

    <TextView
        android:id="@+id/tvLastMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_deal_template"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvLastDeal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailMaxPrice" />

    <TextView
        android:id="@+id/tvLastDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvLastMarket"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxPrice"
        tools:text="Bitfinex" />

    <TextView
        android:id="@+id/tvDetailLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvLastUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastMarket" />

    <TextView
        android:id="@+id/tvLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvDetailLastUpdate"
        app:layout_constraintTop_toBottomOf="@+id/tvLastDeal"
        tools:text="21:05:16" />

</androidx.constraintlayout.widget.ConstraintLayout>